--- a/website/website/catalog/templates/catalog/catalog_documents.html
+++ b/website/website/catalog/templates/catalog/catalog_documents.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+{% load static %}
 
 <div class="information">
    <h1>Study identification</h1>
