--- a/website/website/catalog/templates/catalog/catalog_about.html
+++ b/website/website/catalog/templates/catalog/catalog_about.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+{% load static %}
 
 <div class="information">
    <h1>Introduction</h1>
@@ -24,7 +25,7 @@
    <p class="small">&nbsp;</p> 
    <h1>Acknowledgements</h1>
    <ul>
-      <li>Author: James Staley <a href="http://github.com/jrs95"><img src="../../static/images/owl1.png" width="50px" height="auto"/></a></li>
+      <li>Author: James Staley <a href="http://github.com/jrs95"><img src="{% static 'images/owl1.png' %}" width="50px" height="auto"/></a></li>
       <li>Production team: James Staley, Tom Battram, Gibran Hemani, Matthew Suderman, Caroline Relton & Tom Gaunt</li>
       <li>Data curation team: James Staley, Tom Battram, Gemma Crawford, Claire Prince & Mahsa Sheikhali Babaei</li>
       <li>Funding: This work was supported by an MRC Methodology Research Grant [grant number MR/M025020/1]. The IEU is funded by the MRC [grant numbers MC_UU_12013/2, MC_UU_12013/8 and MC_UU_12013/9].</li>
@@ -32,7 +33,7 @@
    <p class="small">&nbsp;</p> 
    <h1>Contact</h1>
    <p>To contact the EWAS Catalog production team, please email Thomas Battram at thomas.battram@bristol.ac.uk.</p>
-   <p>Follow us:&ensp;<a href="/"> <img src="../../static/images/twitter.png" width="33px" height="auto"/>&ensp; <img src="../../static/images/google.png" width="30px" height="auto"/> </a></p>
+   <p>Follow us:&ensp;<a href="/"> <img src="{% static 'images/twitter.png' %}" width="33px" height="auto"/>&ensp; <img src="{% static 'images/google.png' %}" width="30px" height="auto"/> </a></p>
 </div>
 
 {% endblock %}
