--- a/website/website/catalog/templates/catalog/catalog_results.html
+++ b/website/website/catalog/templates/catalog/catalog_results.html
@@ -1,5 +1,6 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
+{% load static %}
 
 <h1> Search results for <i>{{query_label}}</i> </h1>
 <p class="small">&nbsp;</p>
@@ -36,7 +37,7 @@
 </div>
 <p class="small">&nbsp;</p>
 
-<a href="../../static/tmp/{{filename}}" download="{{query}}.tsv" style="font-size : 13pt" class="btn btn-default"><span class="glyphicon glyphicon-download-alt"></span> Download</a>
+<a href="{% static "" %}/tmp/{{filename}}" download="{{query}}.tsv" style="font-size : 13pt" class="btn btn-default"><span class="glyphicon glyphicon-download-alt"></span> Download</a>
 <p class="small">&nbsp;</p>
 <p class="smalltext">*this tab-deliminated tsv file contains the full set of variables, i.e. those in the <a href="{% url 'catalog_download' %}#variables">downloadable catalog. </p> 
 
