--- a/website/website/catalog/templates/catalog/catalog_home.html
+++ b/website/website/catalog/templates/catalog/catalog_home.html
@@ -38,7 +38,8 @@ p.big {
       <a onclick="myFunction()" href="/?query=chr12:111731203">chr12:111731203</a>,
       <a onclick="myFunction()" href="/?query=FTO">FTO</a>,
       <a onclick="myFunction()" href="/?query=6:15000000-25000000">6:15000000-25000000</a>,
-      <a onclick="myFunction()" href="/?query=body+mass+index">body mass index</a>.
+      <a onclick="myFunction()" href="/?query=body+mass+index">body mass index</a>,
+      <a onclick="myFunction()" href="/?query=27040690">27040690</a>.
       <center><p>&nbsp;</p> 
       <p id="text" style="display:none"><img src="{% static 'images/load.gif' %}" width="80px" height="auto"/></p></center>
 
