adds to search suggestions

--- a/website/website/catalog/templates/catalog/catalog_home.html
+++ b/website/website/catalog/templates/catalog/catalog_home.html
@@ -22,7 +22,7 @@ p.big {
    <p class="small">&nbsp;</p>
    <form method="get" id="searchform" class="searchform">
       <div class="searchboxwrapper">
-         <input class="searchbox" id="query" type="text" name="query" placeholder="Enter CpG, gene, region or trait">
+         <input class="searchbox" id="query" type="text" name="query" placeholder="Enter CpG, gene, region, trait, EFO term or PMID">
          <input class="searchsubmit" type="submit" id="searchsubmit" value="" onclick="myFunction()">
       </div>
    </form>
