added button to link to upload page and updated so two files can be uploaded

--- a/website/website/catalog/templates/catalog/base.html
+++ b/website/website/catalog/templates/catalog/base.html
@@ -56,6 +56,7 @@
                        <li><a href="{% url 'catalog_about' %}">About</a></li>
                        <li><a href="{% url 'catalog_documents' %}">Documentation</a></li>
                        <li><a href="{% url 'catalog_download' %}">Download</a></li>
+                       <li><a href="{% url 'catalog_upload' %}">Upload</a></li>
                    </ul>
                    <ul class="nav navbar-nav navbar-right"> 
                       </li><a class="navbar-brand" href="http://www.bris.ac.uk/social-community-medicine/"><img src="{% static 'images/bristol.png' %}" width="80px" height="auto"/></a></li>
