updated views so the size of updated files are checked for size and to see if they're csv files

--- a/website/website/catalog/templates/catalog/catalog_upload_message.html
+++ b/website/website/catalog/templates/catalog/catalog_upload_message.html
@@ -5,7 +5,7 @@
 <div class="information">
    <h1>Upload</h1>
    <p class="small">&nbsp;</p>       
-   <p>Thank you for your upload. Your data is being processed and we will email you shortly with a zenodo doi for your data. </p>
+   <p>Thank you for your upload. Your data is being processed and we will email you shortly with a zenodo doi for your data. File size: {{ size }}</p>
 </div>
 
 {% endblock %}
