added email being sent to user after upload and updated templates

--- a/website/website/catalog/templates/catalog/catalog_bad_upload_message.html
+++ b/website/website/catalog/templates/catalog/catalog_bad_upload_message.html
@@ -5,9 +5,11 @@
 <div class="information">
    <h1>Upload</h1>
    <p class="small">&nbsp;</p>       
-   <p>Your upload was so bad it is making me physically ill. TRY AGAIN!</p>
+   <p>There was an error in the upload:</p>
 
    <p>{{ x }}</p>
+
+   <p>Plesae fix the error and try to upload again.</p>   
 </div>
 
 {% endblock %}
