--- a/website/website/catalog/templates/catalog/catalog_upload_message.html
+++ b/website/website/catalog/templates/catalog/catalog_upload_message.html
@@ -5,7 +5,7 @@
 <div class="information">
    <h1>Upload</h1>
    <p class="small">&nbsp;</p>       
-   <p>Thank you for your upload. Your data is being processed and we will email you shortly with a zenodo doi for your data. File size: {{ size }}</p>
+   <p>Thank you for your upload. You should have received an email at <b>{{ email }}</b> with an initial report on the data. We will now do more checks on the data, prepare a zenodo doi and add the data to the catalog. We will send you another email when this has been completed.</p>
 </div>
 
 {% endblock %}
