updated upload message to say email the team if the error message is unclear to them. This is just in case an error pops up we haven't anticipated

--- a/website/website/catalog/templates/catalog/catalog_bad_upload_message.html
+++ b/website/website/catalog/templates/catalog/catalog_bad_upload_message.html
@@ -9,7 +9,7 @@
 
    <p>{{ x }}</p>
 
-   <p>Plesae fix the error and try to upload again.</p>   
+   <p>If the error message is unclear then email ewascatalog@outlook.com. Otherwise, please fix the error and re-upload.</p>   
 </div>
 
 {% endblock %}
