--- a/website/website/catalog/templates/catalog/catalog_queries.html
+++ b/website/website/catalog/templates/catalog/catalog_queries.html
@@ -1,31 +1,55 @@
-{% extends "catalog/base.html" %}
+{% extends 'catalog/base.html' %}
 {% block content %}
 {% load static %}
 {% load types %}
 
-{% if query_list %}
-  <h1> Search results for <i>{{query_label}}</i> </h1>
-  <p class="small">&nbsp;</p>
-  {% for query in query_list %}
-    {% if query|is_string %}
-      <p>
-      {{ query }} 
-      </p>
-    {% else %}
-      <div class="catalog-object-border">
-        <span class="catalog-object-marker {{ query.category }}-marker">{{ query.category }}</span>
-        <a href="{{ query.structured_query_url }}"><b>{{ query.title }}</b></a></br>
-        <span style="font-size: 66%">
-        {% for key,value in query.details.items %}
-          &nbsp;<b>{{key}}</b>: {{value}}
-        {% endfor %}
-        </span>
-      </div>
-    {% endif %}
-  {% endfor %}
-{% else %}
-  <div class="information">
-  <h1> No results for <i>{{query_label}}</i> </h1>
-  </div>
-{% endif %}       
+<script type="text/javascript" class="init">
+  $(document).ready(function(){
+    $('#myTable').DataTable({
+      "ordering": false
+    });
+  });
+</script>
+
+<h1> Queries related to <i>{{query_label}}</i> </h1>
+<p class="small">&nbsp;</p>
+
+<div class="catalog">
+  <table id="myTable" width="100%" class="table table-striped">
+    <thead>
+      <tr>
+	<th>Type</th>
+	<th>ID</th>
+	<th>Results</th>
+	<th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for query in query_list %}
+      <tr>
+	{% if query|is_string %}
+	<td colspan="4"> {{ query }} </td>
+	{% else %}
+	<td>
+          <span class="catalog-object-marker {{ query.category }}-marker">{{ query.category }}</span>
+	</td>
+	<td style="word-break: break-all">
+          <a href="{{ query.advanced_query_url }}"><b>{{ query.title }}</b></a>
+	</td>
+	<td>{{ query.assocs }}</td>
+	<td style="word-break: normal">
+          <span style="font-size: 75%">
+            {% for key,value in query.details.items %}
+            <b>{{key}}</b>:{{value}}&nbsp;
+            {% endfor %}
+          </span>
+	</td>
+	{% endif %}
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
 {% endblock %}
+
