--- a/website/website/catalog/templates/catalog/catalog_upload.html
+++ b/website/website/catalog/templates/catalog/catalog_upload.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 {% load static %}
-<form method="post" enctype="multipart/form-data">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Upload</button>
-</form>
+<div id="Upload" class="catalog">
+   <h1>Upload</h1>
+   <p>To upload data please fill in the details below and upload a results file using the template as a guide. If the results file you upload does not match the format of our template the upload will fail. If you cannot fill in certain fields then leave them blank. If you want a zenodo doi generated for the data then please fill in the three fields at the end of the form: "Title of Manuscript", "Description for Zenodo", "All Authors".</p>
+    <a href="{% static "" %}/docs/results_template.csv" download style="font-size : 12pt" class="btn btn-default"><span class="glyphicon glyphicon-download-alt"></span> Download results file template</a>
+   <p>&nbsp;</p>
+   <form method="POST" enctype="multipart/form-data">
+   	  {% csrf_token %}
+      {% for field in form %}
+         <div>
+            {{ field.label_tag }} 
+            <p> {{ field }} </p>
+         </div>
+      {% endfor %}
+      <button type="submit">Submit</button>
+</div>
 
-<p><a href="{% url 'catalog_home' %}">Return to home</a></p>
 {% endblock %}
