--- a/website/website/catalog/templates/catalog/catalog_upload.html
+++ b/website/website/catalog/templates/catalog/catalog_upload.html
@@ -4,7 +4,7 @@
 {% load static %}
 <div id="Upload" class="catalog">
    <h1>Upload</h1>
-   <p>To upload data please fill in the details below and upload a results file using the template as a guide. If the results file you upload does not match the format of our template the upload will fail. If you cannot fill in certain fields then leave them blank. If you want a zenodo doi generated for the data then please fill in the three fields at the end of the form: "Title of Manuscript", "Description for Zenodo", "All Authors".</p>
+   <p>To upload data please fill in the details below and upload a results file using the template as a guide. If the results file you upload does not match the format of our template the upload will fail. If you cannot fill in certain fields then leave them blank. If you want a zenodo doi generated for the data then please fill in the three fields at the end of the form: "Title of Manuscript", "Description for Zenodo", "All Authors". If you have any problems filling in the form, please email The EWAS Catalog team at ewascatalog@outlook.com.</p>
    <p><b>* = required field.</b></p>
     <a href="{% static "" %}/docs/results_template.csv" download style="font-size : 12pt" class="btn btn-default"><span class="glyphicon glyphicon-download-alt"></span> Download results file template</a>
    <p>&nbsp;</p>
@@ -12,8 +12,8 @@
    	  {% csrf_token %}
       {% for field in form %}
          <div>
-            {{ field.label_tag }} 
-            <p> {{ field }} </p>
+            {{ field.label_tag }} {{ field.help_text }} 
+            <p> {{ field }} </p> 
          </div>
       {% endfor %}
       <button type="submit">Submit</button>
