--- a/website/website/catalog/templates/catalog/catalog_about.html
+++ b/website/website/catalog/templates/catalog/catalog_about.html
@@ -25,14 +25,15 @@
    <p class="small">&nbsp;</p> 
    <h1>Acknowledgements</h1>
    <ul>
-      <li>Author: James Staley <a href="http://github.com/jrs95"><img src="{% static 'images/owl1.png' %}" width="50px" height="auto"/></a></li>
-      <li>Production team: James Staley, Tom Battram, Gibran Hemani, Matthew Suderman, Caroline Relton & Tom Gaunt</li>
-      <li>Data curation team: James Staley, Tom Battram, Gemma Crawford, Claire Prince & Mahsa Sheikhali Babaei</li>
+      <li>Original website production: James Staley </li>
+      <li>Core development team: Thomas Battram, Matthew Suderman, Paul Yousefi
+      <li>Production team: Thomas Battram, James Staley, Matthew Suderman, Paul Yousefi, Gibran Hemani, Gemma Sharp, Tom Gaunt, Caroline Relton</li>
+      <li>Data curation team: Thomas Battram, James Staley, Gemma Crawford, Claire Prince, Mahsa Sheikhali Babaei, Paul Yousefi, Matthew Suderman, Charlie Hatcher, Maria Vega Salas, Sahar Khodabakhsh, Oliver Whitehurst, Luke Mahoney, Hannah Elliott, Ryan Langdon, Giulia Mancano, Matthew Lee, Sarah Watkins</li>
       <li>Funding: This work was supported by an MRC Methodology Research Grant [grant number MR/M025020/1]. The IEU is funded by the MRC [grant numbers MC_UU_12013/2, MC_UU_12013/8 and MC_UU_12013/9].</li>
    </ul>
    <p class="small">&nbsp;</p> 
    <h1>Contact</h1>
-   <p>To contact the EWAS Catalog production team, please email Thomas Battram at thomas.battram@bristol.ac.uk.</p>
+   <p>To contact the EWAS Catalog development team, please email ewascatalog@outlook.com.</p>
    <p>Follow us:&ensp;<a href="/"> <img src="{% static 'images/twitter.png' %}" width="33px" height="auto"/>&ensp; <img src="{% static 'images/google.png' %}" width="30px" height="auto"/> </a></p>
 </div>
 
