updated the download page and the files that can be downloaded to make sure these files are up to date AND because keeping meta-data and results files separate is a million types better

--- a/website/website/catalog/templates/catalog/catalog_about.html
+++ b/website/website/catalog/templates/catalog/catalog_about.html
@@ -33,7 +33,7 @@
    </ul>
    <p class="small">&nbsp;</p> 
    <h1>Contact</h1>
-   <p>To contact the EWAS Catalog development team, please email ewascatalog@outlook.com.</p>
+   <p>To contact the EWAS Catalog development team, please email <a href="mailto:ewascatalog@outlook.com">ewascatalog@outlook.com</a>.</p>
    <p>Follow us:&ensp;<a href="/"> <img src="{% static 'images/twitter.png' %}" width="33px" height="auto"/>&ensp; <img src="{% static 'images/google.png' %}" width="30px" height="auto"/> </a></p>
 </div>
 
