--- a/website/website/catalog/templates/catalog/catalog_about.html
+++ b/website/website/catalog/templates/catalog/catalog_about.html
@@ -28,7 +28,7 @@
       <li>Original website production: James Staley </li>
       <li>Core development team: Thomas Battram, Matthew Suderman, Paul Yousefi
       <li>Production team: Thomas Battram, James Staley, Matthew Suderman, Paul Yousefi, Gibran Hemani, Gemma Sharp, Tom Gaunt, Caroline Relton</li>
-      <li>Data curation team: Thomas Battram, James Staley, Gemma Crawford, Claire Prince, Mahsa Sheikhali Babaei, Paul Yousefi, Matthew Suderman, Charlie Hatcher, Maria Vega Salas, Sahar Khodabakhsh, Oliver Whitehurst, Luke Mahoney, Hannah Elliott, Ryan Langdon, Giulia Mancano, Matthew Lee, Sarah Watkins, Abigail Lay</li>
+      <li>Data curation team: Thomas Battram, James Staley, Gemma Crawford, Claire Prince, Mahsa Sheikhali Babaei, Paul Yousefi, Matthew Suderman, Charlie Hatcher, Mar&iacutea Jes&uacutes Vega-Salas, Sahar Khodabakhsh, Oliver Whitehurst, Luke Mahoney, Hannah Elliott, Ryan Langdon, Giulia Mancano, Matthew Lee, Sarah Watkins, Abigail Lay</li>
       <li>Funding: This work was supported by an MRC Methodology Research Grant [grant number MR/M025020/1]. The IEU is funded by the MRC [grant numbers MC_UU_12013/2, MC_UU_12013/8 and MC_UU_12013/9].</li>
    </ul>
    <p class="small">&nbsp;</p> 
