--- a/website/website/catalog/templates/catalog/catalog_about.html
+++ b/website/website/catalog/templates/catalog/catalog_about.html
@@ -34,7 +34,12 @@
    <p class="small">&nbsp;</p> 
    <h1>Contact</h1>
    <p>To contact the EWAS Catalog development team, please email <a href="mailto:ewascatalog@outlook.com">ewascatalog@outlook.com</a>.</p>
-   <p>Follow us:&ensp;<a href="/"> <img src="{% static 'images/twitter.png' %}" width="33px" height="auto"/>&ensp; <img src="{% static 'images/google.png' %}" width="30px" height="auto"/> </a></p>
+   <p>Follow us:&ensp;
+     <a href="https://twitter.com/ewascatalog">
+       <img src="{% static 'images/twitter.png' %}" width="33px" height="auto"/></a>
+<!--     &ensp;
+     <a href="">
+       <img src="{% static 'images/google.png' %}" width="30px" height="auto"/> </a>--></p>
 </div>
 
 {% endblock %}
